# pinCommander

./: README.md
pincommander-controller/: .gitignore  CMakeLists.txt  README.md  sdkconfig
pincommander-controller/main/: CMakeLists.txt  accel.c  accel.h  idf_component.yml  keymaps.h  main.c  udp_server.c  udp_server.h  usb.c  usb.h
pincommander-hmi/: README.md
pincommander-hmi/hmi/libraries/: lv_conf.h
pincommander-hmi/hmi/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
pincommander-hmi/hmi/libraries/ui/src/images/: ui_img_1570440351.c  ui_img_1661985963.c  ui_img_19160962.c  ui_img_444550322.c  ui_img_494244644.c  ui_img_576355194.c  ui_img_702768146.c  ui_img_green_wifi_64_png.c  ui_img_red_wifi_64_png.c  ui_img_stats_png.c  ui_img_volume_disabled_icon_64_png.c  ui_img_volume_disabled_icon_64_pressed_png.c  ui_img_volume_normal_icon_64_png.c  ui_img_volume_normal_icon_64_pressed_png.c  ui_img_volume_normal_red_icon_64_png.c  ui_img_volume_normal_red_icon_64_pressed_png.c
pincommander-hmi/hmi/libraries/ui/src/screens/: ui_Screen1.c
pincommander-hmi/hmi/main/: lvgl_event_handler.c  lvgl_event_handler.h  main.h  main.ino  msgids.h  touch.h
pincommander-hmi/squareline-hmi-project/: SquareLine_Project.sll  SquareLine_Project.spj  SquareLine_Project_events.py
